--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,8 +8,9 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/default/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/BP_Gamemode.BP_Gamemode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
