Final Push for Demo

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=FE525E6948B576352B055CA61EEBF3B5
-ProjectName=Third Person BP Game Template
+ProjectName=das gaamee
+bAllowWindowResize=True
+
