FINAL PUSH OF COMBAT DEMO

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,3 +3,7 @@ ProjectID=FE525E6948B576352B055CA61EEBF3B5
 ProjectName=das gaamee
 bAllowWindowResize=True
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+ForDistribution=True
+
