--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Feature
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/Roof.Roof
-GameDefaultMap=/Game/Levels/Roof.Roof
+EditorStartupMap=/Game/Levels/W_Roof.W_Roof
+GameDefaultMap=/Game/Levels/W_Roof.W_Roof
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
